# personal-news-db

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  news.db  pyproject.toml
.cursor/rules/: development-guideline.mdc  mypy-guidelines.mdc  project-flow.mdc  ruff-guidelines.mdc  sqlalchemy.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8e4d929bf314_initial_migration.py
docs/: design.md  summary_generation_design.md  tools_and_libraries.md
scripts/: init_production_db.py  init_with_alembic.py
src/news_assistant/: database.py  main.py  models.py  schemas.py  summary.py
src/news_assistant/ai/: __init__.py  exceptions.py  providers.py  schemas.py  summarizer.py
src/news_assistant/articles/: __init__.py  models.py  router.py  schemas.py  service.py
src/news_assistant/content/: __init__.py  audio_preprocessor.py  extractor.py  processor.py  schemas.py
src/news_assistant/core/: __init__.py  config.py  database.py  exceptions.py
src/news_assistant/health/: __init__.py  router.py
src/news_assistant/speech/: __init__.py  exceptions.py  schemas.py  service.py
tests/: conftest.py  test_ai.py  test_articles.py  test_audio_preprocessor.py  test_content.py  test_integration.py  test_main.py  test_new_structure.py  test_speech.py
